update project to final version(but before test)